--- a/styles/global.css
+++ b/styles/global.css
@@ -17,7 +17,18 @@
 .notion p{
   @apply text-lg text-left my-2
 }
-
 .notion a{
   @apply text-blue-500
+}
+.notion strong{
+  @apply font-bold
+}
+.notion i{
+  @apply italic
+}
+.notion s{
+  @apply line-through
+}
+.notion u{
+  @apply underline
 }
